# pydantic-azure-keyvault-secrets-types

./: LICENSE  pyproject.toml
pydantic_azure_keyvault_secrets_types/: __init__.py  key_vault_reference.py
tests/: test_key_vault_reference.py
